--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>todopractice</title>
+    <script
+      src="https://kit.fontawesome.com/ea9be23fb1.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,15 +25,15 @@
     <section class="container">
       <h1>ToDo</h1>
       <section class="input-area">
-        <input type="text" id="task-input" />
+        <input type="text" id="task-input" placeholder="할 일 추가하기" />
         <button id="add-button">+</button>
       </section>
       <section class="task-area">
         <div class="task-tabs">
           <div id="uderlinie"></div>
-          <a href="#">모두</a>
-          <a href="#">진행중</a>
-          <a href="#">끝남</a>
+          <a href="#" id="show-all">모두</a>
+          <a href="#" id="task-ongoing">진행중</a>
+          <a href="#" id="task-done">끝남</a>
         </div>
         <div>
           <div id="task-board">
