--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
   </head>
   <body>
     <section class="container">
-      <h1>ToDo</h1>
+      <div class="header">
+        <h1>오늘의 할 일</h1>
+        <div class="clock">
+          <span id="hrs">00</span>
+          <span>:</span>
+          <span id="min">00</span>
+          <span>:</span>
+          <span id="sec">00</span>
+        </div>
+
+      </div>
       <section class="input-area">
         <input type="text" id="task-input" placeholder="할 일 추가하기" />
         <button id="add-button">+</button>
@@ -35,6 +45,7 @@
           <a href="#" id="task-ongoing">진행중</a>
           <a href="#" id="task-done">끝남</a>
         </div>
+      </section>
         <div>
           <div id="task-board">
             <!-- <div class="task">
@@ -45,8 +56,8 @@
                 <button>Delete</button>
               </div>
             </div> -->
-          </div>
         </div>
+        
         <!-- 마감일 모달창 -->
         <div
           class="modal fade"
@@ -89,7 +100,6 @@
             </div>
           </div>
         </div>
-      </section>
     </section>
 
     <script src="main.js"></script>
